force-app/main/default/objects/SuRF_Partner_Performance_Scorecard__c/SuRF_Partner_Performance_Scorecard__c.object-meta.xml
<CustomObject>
    <description>NPN : Partner Community : NPN Compliance :</description>
    <label>SuRF-Partner Performance Scorecard</label>
    <nameField>
        <displayFormat>SuRF-PPS-{00000}</displayFormat>
        <label>SuRF-Partner Performance Scorecard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SuRF-Partner Performance Scorecards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>