force-app/main/default/objects/SuRF_Partner_Performance_Scorecard__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <label>Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>