force-app/main/default/objects/SuRF_Partner_Performance_Scorecard__c/fields/PBM__c.field-meta.xml
<CustomField>
    <fullName>PBM__c</fullName>
    <label>PBM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>