force-app/main/default/objects/SuRF_Partner_Performance_Scorecard__c/fields/Program_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Signed_Date__c</fullName>
    <label>Program Signed Date</label>
    <type>Date</type>
</CustomField>