force-app/main/default/objects/SuRF_Partner_Performance_Scorecard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partner_Program__c</columns>
    <columns>Account_ID__c</columns>
    <columns>Competency__c</columns>
    <columns>Flag__c</columns>
    <columns>Level__c</columns>
    <columns>Order__c</columns>
    <columns>PBM__c</columns>
    <columns>Program_Signed_Date__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>